--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -29,6 +29,7 @@
           <td><%= f.airport %></td>
           <td><%= f.flightNo %></td>
           <td><%= f.departs %></td>
+          <td><a href="/flights/<%= f._id %>">See more info</a></td>
           
           
         </tr>
