--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -8,7 +8,11 @@
   <title>Mongoose Movies</title>
 </head>
 <body>
-  <h1>Flight List</h1>
+  <nav>
+    <a href="/flights">Flights</a>
+    <a href="/flights/new">New Flight</a>
+  </nav>
+ <h1>Flight List</h1>
   <table>
     <thead>
       <tr>
