--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -7,6 +7,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
+  <nav>
+    <a href="/flights">Flights</a>
+    <a href="/flights/new">New Flight</a>
+  </nav>
     <h2>Enter a New Flight</h2>
     <form action="/flights" method="POST">
       <label>Airline:
