--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -65,7 +65,7 @@
 
      </form>
      <h3>View Tickets</h3>
-     <% flight.tickets.forEach(function(t){ %>
+     <% tickets.forEach(function(t){ %>
        <%= t.price %>
        <%= t.seat %>
      <% })  %>
